--- a/Day17~20/css/style.css
+++ b/Day17~20/css/style.css
@@ -161,8 +161,8 @@ section .title p { font-size: 18px; color: #555; }
 
 /* section - contents */
 section.contents { background-color: #fff; padding: 80px 0;}
-section.contents ul { margin: 30px auto; width: 100%; border-bottom: 1px solid #000; overflow: hidden;}
-section.contents ul li { float: left; width: calc(100%/3); height: 100%; }
+section.contents ul { margin: 30px auto; width: 100%;  overflow: hidden;}
+section.contents ul li { float: left; width: calc(97%/3); height: 100%; padding: 7px; }
 section.contents ul li a { display: block; width: 100%; height: 100%; }
 section.contents ul li a p.img { width: 100%; overflow: hidden; height: 300px; }
 section.contents ul li a p.img img { width: 100%; height: 100%; transition: all 1s; } 
@@ -177,10 +177,63 @@ section.contents ul li a .text p.more {
     padding-left: 10px;
 }
 
+/* section - service */
+section.service { padding: 80px 0; }
+section.service .service-list { margin-top: 50px; text-align: center; }
+section.service .service-list li {
+    display: inline-block;
+    width: calc(95%/5);
+    height: 400px;
+    padding: 5px;
+    box-sizing: border-box;
+    margin-bottom: 20px;
+    text-align: left;
+    /* border: 1px solid black; */
+}
+section.service .service-list li .card {
+    width: 100%;
+    height: 100%;
+    box-shadow: 10px 10px 10px #ddd;
+    transition: all 0.4s;
+    cursor: pointer;
+}
+section.service .service-list li .card .card-img { height: 200px; }
+section.service .service-list li .card .card-img img { width: 100%; height: 100%; }
+section.service .service-list li .card .card-info {
+    padding: 8px; 
+    height: 180px; 
+    box-sizing: border-box; 
+    position: relative; 
+}
+section.service .service-list li .card .card-info h2 { font-size: 1.4rem; margin-bottom: 5px; }
+section.service .service-list li .card .card-info p { font-size: 1.2rem; margin-bottom: 5px; }
+section.service .service-list li .card .card-info .star-box {}
+section.service .service-list li .card .card-info .star-box img { width: 16px; margin-right: -3px; }
+section.service .service-list li .card .card-info .star-box span { font-size: 0.8rem; line-height: 16px; }
+section.service .service-list li .card .card-info .btn { 
+    display: inline-block; 
+    position: absolute;    
+    right: 20px;
+    bottom: 5px;
+    padding: 10px 20px;
+    background-color: cornflowerblue;
+    color: white;
+    border-radius: 20px;
+}
+
+section.service .service-list li .card:hover {
+    transform: translateY(-20px);
+    transition: all 0.4s;
+    box-shadow: 15px 15px 5px #ddd;
+}
+
+
+
 /* footer */
-footer { border-top: 1px solid #999; padding: 30px 0 50px; }
+footer { padding: 30px 0 50px; }
 footer .inner { width: 100%; margin: 0 auto; overflow: hidden;}
-footer .inner .ftLogo { float: left; } 
+footer .inner .footer-logo { float: left; } 
+footer .inner .footer-logo img { filter: grayscale(100%) opacity(50%); }
 footer .inner .address { float: left; margin-left: 50px; margin-top: 10px; }
 footer .inner .address li:first-child { font-weight: bold; margin-bottom: 10px; } 
 footer .inner .address li:last-child { color: #999; }
@@ -240,14 +293,14 @@ footer .inner .list li:last-child a { font-weight: bold; }
         cursor: pointer;
     }
 
-    .sidebar {width: 100%;}
+    .sidebar {width: 100%; background-color: rgba(64,64,64,0.9);}
     .sidebar .inner {}
     .sidebar .inner a { font-size: 24px; }
     .sidebar .close { font-size: 30px; }
 
     section.slide {
         width: 300vw;
-        height: 200px;
+        /* height: auto; */
         position: relative;
         margin-bottom: 50px;
     }
@@ -255,7 +308,7 @@ footer .inner .list li:last-child a { font-weight: bold; }
 
     section.slide ul  li {
         width: 100vw;
-        height: 200px;
+        /* height: auto; */
     }
 
     @keyframes slide {
@@ -265,7 +318,32 @@ footer .inner .list li:last-child a { font-weight: bold; }
         100% { left: 0;}
     }
 
-    /* sectino title 부터~ */
+    section .title h2 { font-size: 1.4rem; }
+
+    section.contents { padding: 10px 0; }
+    section.contents ul li { width: 100%;}
+    section.contents ul li a p.img { height: 350px; text-align: center; }
+    section.contents ul li a p.img img { width: 90%;}
+
+
+    section.service .service-list li { 
+        width: calc(95%/2);
+    }
+
+
+    footer .inner .footer-logo { float: none; margin: 0 auto; text-align: center;}
+    footer .inner .footer-logo img { height: 50px; }
+    footer .inner .address { 
+        float: none; 
+        margin: 0 auto; 
+        text-align: center;
+        margin-bottom: 15px;
+    }
+
+    footer .inner .list { text-align: center; float: none;  }
+    footer .inner .list li { display: inline-block; float: none; }
+    footer .inner .list li a { font-size: 0.62rem;}
+    footer .inner .list li a:after { top : 5px; }
 
 
 }
